--- a/.github/workflows/main_testes-unitarios.yaml
+++ b/.github/workflows/main_testes-unitarios.yaml
@@ -20,8 +20,8 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: "temurin"
+          java-version: "17"
 
       - name: Cache Gradle packages
         uses: actions/cache@v3
